Refactor AbstractEventJdbcTableManager to extract column selection logic